--- a/src/components/Css/Header.css
+++ b/src/components/Css/Header.css
@@ -1,24 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap');
 body {
   margin: 0;
   width: 100%;
   height: 100%;
-}
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  align-content: stretch;
+  position: absolute;
+ }
+.headerBox{
+  border: 10px solid rgb(110, 144, 236);
+  border-style: solid;
+  border-radius: 3px;
+  width: 100vw;
+  height: auto;
 }
 .header {
   display: flex;
   height: 15vh;
-  width: 100vw;
-  font-family: 'Do Hyeon', sans-serif;
-  font-size: 30pt;
-  align-items: center;
-  justify-content: center;
+  width: auto;
+}
+.headerText{
+  text-shadow: 4px 4px 4px  rgb(164, 179, 185) ;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 8vh;
+  color:#616FB9;
+  text-align: center ;
+  height: auto;
+  font-weight: 700;
+  width: auto;
+  /* align-items: center;
+  justify-content: center;  */
 }
