--- a/src/components/Css/Login.css
+++ b/src/components/Css/Login.css
@@ -2,8 +2,9 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  position: absolute;
 }
-.container {
+/* .container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -11,27 +12,37 @@ body {
   justify-content: space-between;
   align-items: stretch;
   align-content: stretch;
-}
+} */
 .login {
   height: 70%;
   width: 100%;
 }
 .loginOver,
 .loginOverFont,
-.loginUnder,
+
 .symbolImg {
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
 }
+.loginUnder{
+  height: auto;
+  width: auto;
+  font-size: 2vh;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
 
 .loginOver {
   display: flex;
-  height: 6vh;
-  width: 100%;
+  height: 7vh;
+  width: auto;
   background-color: #3e3e5f;
-  font-size: 120%;
+  font-size: 1.2vh;
   color: white;
 }
 
