--- a/src/components/Css/Main.css
+++ b/src/components/Css/Main.css
@@ -1,4 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
 body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+/* .container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  align-content: stretch;
+} */
+.mainBody{
+  width: auto;
+  height: 78vh;
+  background-color: rgb(234 232 244);
+  margin-left: 20vh;
+  overflow: auto;
+}
+.mainN{
+  width:auto;
+  height: 7vh;
+  background-color: #21429d;
+  margin-left: 20vh;
+  font-family: 'Noto Sans KR', sans-serif;
+  text-align: center;
+}
+
+.main {
+  float: left;
+  width: 85%;
+  height: 70vh;
+}
+.mainOver {
+  margin-left: 20vh;
+  font-size: 10pt;
+  height: 6vh;
+  margin-top: 0;
+  text-align: center;
+  background-color: #21429d;
+  
+}
+
+.tableSet {
+  margin-top: 10px;
+  border: 1px gray solid;
+}
+
+.tableSet td,
+th {
+  border: 1px gray solid;
+}
+/* body {
   margin: 0;
   width: 100%;
   height: 100%;
@@ -19,14 +75,16 @@ body {
   height: 70vh;
 }
 .mainOver {
-  font-size: 10pt;
-  height: 4vh;
-  margin-top: 0;
+  font-size: 1vh;
+  height: 6vh;
+  width: auto;
+  margin-top: auto;
   text-align: center;
   background-color: #21429d;
 }
 
 .tableSet {
+  display: inline;
   margin-top: 10px;
   border: 1px gray solid;
 }
@@ -35,3 +93,4 @@ body {
 th {
   border: 1px gray solid;
 }
+ */
