--- a/src/components/Css/Login.css
+++ b/src/components/Css/Login.css
@@ -1,84 +1,189 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap');
+
+:root {
+	--primary-color: #41C2CB;
+	--secondary-color: #80D6DC;
+}
+
+* {
+	box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  width: 100%;
-  height: 100%;
+	background: #EDEDEE;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Raleway', sans-serif;
+	height: 100vh;
+	margin: -20px 0 50px;
+}
+
+h1 {
+	font-weight: bold;
+	margin: 0;
+}
+
+h2 {
+	text-align: center;
+}
+
+p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	margin: 20px 0 30px;
+}
+
+a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
+}
+
+button {
+	border-radius: 20px;
+	border: 1px solid var(--primary-color);
+	background-color: var(--secondary-color);
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+button:hover {
+	transform: scale(1.05);
+}
+
+button.signup_btn {
+	background-color: transparent;
+	border-color: #FFFFFF;
+}
+
+form {
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
+}
+
+input {
+	background-color: #EDEDEE;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+}
+
+.loginHead{
+  background-color: #007E9F ;
+  width: 100vw; 
+  height: 7vh; 
   position: absolute;
-}
-/* .container {
-  width: 100%;
-  height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  align-content: stretch;
-} */
-.login {
-  height: 70%;
-  width: 100%;
-}
-.loginOver,
-.loginOverFont,
-
-.symbolImg {
-  display: flex;
-  align-items: center;
   justify-content: center;
-  text-align: center;
-}
-.loginUnder{
-  height: auto;
-  width: auto;
-  font-size: 2vh;
   align-items: center;
-  justify-content: center;
-  text-align: center;
+  text-align: center; 
+  border-radius: 10px;
+
 }
-
-
-
-.loginOver {
-  display: flex;
-  height: 7vh;
-  width: auto;
-  background-color: #3e3e5f;
-  font-size: 1.2vh;
+.HeadImg{
+  width: 6vh;  
+}
+.HeadText{
+  margin-bottom: 5px;
+  margin-left: 10px;
+  font-size: 5vh;
   color: white;
+  /* font-family: 'Nanum Gothic', sans-serif; */
+  font-family: 'Noto Sans KR', sans-serif;
+  white-space:nowrap;
 }
 
-.loginOverFont {
-  font-size: 200%;
-  color: white;
+.container {
+	background-color: #fff;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
+	min-height: 480px;
 }
 
-.loginUnder {
-  display: flex;
-  height: 63vh;
-  width: 100%;
-  line-height: 25px;
+.form {
+	position: absolute;
+	top: 0;
+	height: 100%;
 }
 
-.symbolImg {
-  height: 70%;
+.sign-in-container {
+	left: 0;
+	width: 50%;
 }
 
-.loginText {
-  display: flex;
-  align-items: left;
-  height: 30px;
-  margin-top: 5%;
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
 }
 
-.loginInput {
-  height: 25px;
-  width: 250px;
+.overlay {
+	background: #41C2CB;
+	background: linear-gradient(to right, var(--secondary-color), var(--primary-color));
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
 }
 
-.loginButton {
-  padding: 5px 30px 5px 30px;
-  border: 0px;
-  font-size: 20px;
-  background-color: rgb(0, 0, 124);
-  color: white;
-  border-radius: 5px;
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+}
+
+.overlay-right {
+	right: 0;
+}
+
+.social-container {
+	margin: 20px 0;
+}
+
+.social-container a {
+	border: 1px solid var(--primary-color);
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
+}
+.social-container a:hover{
+	transform: scale(1.08);
 }
