--- a/src/components/Css/Menu.css
+++ b/src/components/Css/Menu.css
@@ -16,16 +16,25 @@ body {
 } */
 .menu {
   float: left;
-  width: 20vh;
-  height: 85vh;
-  background-color: rgb(218,227,243);
+  width: 15vw;
+  height: 93vh;
+  background-color: #57606F;
   font-size: 2vh;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 700;
+  box-sizing: border-box;
+  border: ridge 2px white;
 }
 .MenuName {
   cursor: pointer;
-  margin-left: 10%;
+  text-indent: 20px;
+  color: white;
+}
+.MenuName:hover{
+  background-color: #78B2C6;
+  width: auto;
+  height: 4vh;
+  border-radius: 10px;
 }
 .MenuDisappear {
   cursor: pointer;
@@ -36,6 +45,13 @@ body {
 .MenuName1 {
   cursor: pointer;
   margin: 10%;
+  color: white;
+}
+.MenuName1:hover{
+  background-color: #78B2C6;
+  width: auto;
+  height: 4vh;
+  border-radius: 10px;
 }
 .MenuDisappear1 {
   display: none;
@@ -46,6 +62,8 @@ body {
 .MenuText {
   margin-top: 25%;
   cursor: pointer;
+  justify-content: space-around;
+  
 }
 .MenuText:hover{
   background-color: rgb(132, 151, 176);
@@ -70,4 +88,11 @@ body {
   margin-top: 0;
   text-align: center;
   background-color: rgb(218,227,243);
+}
+
+.MenuBox{
+  display: flex;
+  width: 20vw;
+  height: 20vh;
+  background-color: #282C3C;
 }
